fix too big buttons in wiki list

--- a/view/css/mod_wiki.css
+++ b/view/css/mod_wiki.css
@@ -33,7 +33,7 @@
 	width: 100%;
 }
 
-td i {
+td > i {
 	padding: 7px 5px;
 	cursor: pointer;
 }
